force-app/main/default/objects/Temporal_Licencias__c/Temporal_Licencias__c.object-meta.xml
<CustomObject>
    <label>Temporal Licencia</label>
    <nameField>
        <label>Temporal Licencia</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temporal Licencias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>