force-app/main/default/objects/Temporal_Licencias__c/fields/CL_ANO__c.field-meta.xml
<CustomField>
    <fullName>CL_ANO__c</fullName>
    <label>CL_ANO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>