force-app/main/default/objects/Temporal_Licencias__c/fields/CL_ENTIDAD__c.field-meta.xml
<CustomField>
    <fullName>CL_ENTIDAD__c</fullName>
    <label>CL_ENTIDAD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>