force-app/main/default/objects/Temporal_Licencias__c/fields/CL_FDEVFED__c.field-meta.xml
<CustomField>
    <fullName>CL_FDEVFED__c</fullName>
    <label>CL_FDEVFED</label>
    <type>Date</type>
</CustomField>