force-app/main/default/objects/Temporal_Licencias__c/fields/CL_FECHA__c.field-meta.xml
<CustomField>
    <fullName>CL_FECHA__c</fullName>
    <label>CL_FECHA</label>
    <type>Date</type>
</CustomField>