force-app/main/default/objects/Temporal_Licencias__c/fields/CL_FPETFED__c.field-meta.xml
<CustomField>
    <fullName>CL_FPETFED__c</fullName>
    <label>CL_FPETFED</label>
    <type>Date</type>
</CustomField>