force-app/main/default/objects/Temporal_Licencias__c/fields/CL_FTOPE__c.field-meta.xml
<CustomField>
    <fullName>CL_FTOPE__c</fullName>
    <label>CL_FTOPE</label>
    <type>Date</type>
</CustomField>