force-app/main/default/objects/Temporal_Licencias__c/fields/CL_TIPALU__c.field-meta.xml
<CustomField>
    <fullName>CL_TIPALU__c</fullName>
    <label>CL_TIPALU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>