force-app/main/default/objects/Temporal_Licencias__c/fields/CL_TIPO__c.field-meta.xml
<CustomField>
    <fullName>CL_TIPO__c</fullName>
    <label>CL_TIPO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>