force-app/main/default/objects/Temporal_Licencias__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Temporal Licencias</relationshipLabel>
    <relationshipName>Temporal_Licencias</relationshipName>
    <type>Lookup</type>
</CustomField>