force-app/main/default/objects/Temporal_Licencias__c/fields/LI_NUMFEDE__c.field-meta.xml
<CustomField>
    <fullName>LI_NUMFEDE__c</fullName>
    <label>LI_NUMFEDE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>