force-app/main/default/objects/Temporal_Licencias__c/fields/LI_NUMLIC__c.field-meta.xml
<CustomField>
    <fullName>LI_NUMLIC__c</fullName>
    <label>LI_NUMLIC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>