force-app/main/default/objects/Temporal_Licencias__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>id__c</columns>
    <columns>CL_ALUMNO__c</columns>
    <columns>CL_ANO__c</columns>
    <columns>CL_ENTIDAD__c</columns>
    <columns>CL_TIPO__c</columns>
    <columns>CL_IMPORTE__c</columns>
    <columns>CL_FECHA__c</columns>
    <columns>CL_FTOPE__c</columns>
    <columns>LI_NUMLIC__c</columns>
    <columns>Estado__c</columns>
    <columns>Tipo_Error__c</columns>
    <columns>Contract__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Estado__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </filters>
    <label>All Records</label>
</ListView>